# ApoloTeams

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CICD.md  DEPLOYMENT_DEBIAN12.md  Dockerfile  README.md  TROUBLESHOOTING.md  api-tests.http  deploy.sh  diagnose_auth.sh  docker-compose.yml  test_auth.sh
.github/workflows/: ci.yml  deploy-azure.yml  deploy-cloudrun.yml  deploy-vm.yml
backend/: Cargo.toml
backend/migrations/: 20240101000001_initial_schema.sql  20240101000002_meetings.sql
backend/src/: config.rs  error.rs  main.rs  middleware.rs  websocket.rs
backend/src/db/: calls.rs  channels.rs  files.rs  meetings.rs  messages.rs  mod.rs  notifications.rs  teams.rs  users.rs
backend/src/handlers/: auth.rs  calls.rs  channels.rs  files.rs  health.rs  meetings.rs  messages.rs  mod.rs  notifications.rs  search.rs  teams.rs  users.rs
backend/src/services/: auth.rs  calls.rs  channels.rs  files.rs  meetings.rs  messages.rs  mod.rs  notifications.rs  teams.rs  users.rs
frontend/: Cargo.toml  index.html
frontend-react/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-react/src/: App.tsx  index.css  vite-env.d.ts
frontend-react/src/api/: client.ts
frontend-react/src/components/calendar/: Calendar.tsx  CreateMeetingModal.tsx  MeetingDetailsModal.tsx  index.ts
frontend-react/src/components/call/: CallControls.tsx  CallMinimized.tsx  DirectCallButton.tsx  IncomingCallModal.tsx  ParticipantGrid.tsx  VideoCallModal.tsx  index.ts
frontend-react/src/hooks/: index.ts  useChannel.ts  useWebRTC.ts  useWebSocketManager.ts  useWebSocketSetup.ts
frontend-react/src/pages/: CalendarPage.tsx  ChatPage.tsx  HomePage.tsx  HomePage.tsx.tmp.725.1768831803745  LoginPage.tsx  MainLayout.tsx  RegisterPage.tsx  SettingsPage.tsx  TeamPage.tsx
frontend-react/src/store/: index.ts
frontend-react/src/store/slices/: connectionSlice.ts  messageSlice.ts
frontend-react/src/types/: index.ts
frontend-react/src/websocket/: client.ts
frontend/src/: api.rs  hooks.rs  main.rs  state.rs  websocket.rs
frontend/src/components/: avatar.rs  button.rs  input.rs  message.rs  message_input.rs  mod.rs  modal.rs  sidebar.rs  user_status.rs
frontend/src/pages/: auth.rs  chat.rs  home.rs  mod.rs  settings.rs  team.rs
scripts/: reset-password.sh
shared/: Cargo.toml
shared/src/: dto.rs  error.rs  lib.rs  models.rs  validation.rs
turn-server/: Dockerfile  aci-deployment.yaml  config.toml  turnserver.conf
