[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rust-teams-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
shared = { workspace = true }
tokio = { workspace = true }
actix-web = { workspace = true }
actix-ws = { workspace = true }
actix-files = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }

# Additional dependencies
actix-rt = "2.9"
actix-multipart = "0.6"
futures-util = "0.3"
rand = "0.8"
base64 = "0.21"
mime = "0.3"
mime_guess = "2.0"
tokio-stream = "0.1"
dashmap = "5.5"
regex = "1.10"
