[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
wasm = ["uuid/js"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
